--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,13 +126,14 @@
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
       
-      <% if @items != nil %>
+      <% if @items.present? %>
         <% @items.each do |item| %>
           <li class='list'>
             <%= link_to "#" do %>
             <div class='item-img-content'>
               <%# if item.image.attached?は本アプリでは必要ないが念のため入れておく %>
-              <%= image_tag item.image, class: "item-img" if item.image.attached? %>
+              <%# <%= image_tag item.image, class: "item-img" if item.image.attached? %>
+              <%= image_tag item.image, class: "item-img" %>
 
               <%# 商品が売れていればsold outを表示しましょう %>
               <%# <div class='sold-out'>
