--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,11 +129,10 @@
       <% if @items.present? %>
         <% @items.each do |item| %>
           <li class='list'>
-            <%= link_to "#" do %>
+            <%= link_to item_path(item.id), method: :get do %>
             <div class='item-img-content'>
               <%# if item.image.attached?は本アプリでは必要ないが念のため入れておく %>
-              <%# <%= image_tag item.image, class: "item-img" if item.image.attached? %>
-              <%= image_tag item.image, class: "item-img" %>
+              <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
               <%# 商品が売れていればsold outを表示しましょう %>
               <%# <div class='sold-out'>
