--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,13 +131,14 @@
           <li class='list'>
             <%= link_to item_path(item.id), method: :get do %>
             <div class='item-img-content'>
-              <%# if item.image.attached?は本アプリでは必要ないが念のため入れておく %>
               <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
               <%# 商品が売れていればsold outを表示しましょう %>
-              <%# <div class='sold-out'>
-                <span>Sold Out!!</span>
-              </div> %>
+              <% if @orders.exists?(item_id: item.id) %>
+                <div class='sold-out'>
+                  <span>Sold Out!!</span>
+                </div>
+              <% end %>
               <%# //商品が売れていればsold outを表示しましょう %>
 
             </div>
